--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,13 @@
 name    = MuSiC2
-author  = Beifang Niu && Cyriac Kandoth from The Genome Institute of Washington University at St. Louis
+author  = Beifang Niu 
+author  = Cyriac Kandoth 
+author  = Adam Scott
+author  = Matthew Wyczalkowski
 version = 0.2
 license = Perl_5
-copyright_holder = The Genome Institute at Washington University
-copyright_year   = 2013
-abstract = identifying mutational significance in cancer genomes.
+copyright_holder = McDonnell Genome Institute at Washington University
+copyright_year   = 2017
+abstract = Identifying mutational significance in cancer genomes.
 
 [@Basic]
 
